--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,29 @@ h2{
   height: 350px;
   border-radius: 5px;
 }
- 
+.contactform {
+  background-color: #f1f1f1;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);  
+  padding: 30px;
+  min-width: 300px;
+}
+input, textarea {
+  padding: 10px;
+  width: 100%;
+  font-size: 17px;
+  border: none;
+  border-bottom: 2px solid #acacac;
+}
+button {
+  background-color:  rgb(36, 88, 138);
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  padding: 10px 20px;
+  font-size: 17px;
+  cursor: pointer;
+}
+
  .rightContent nav ul{
    border-radius: 3px; 
    list-style-type: none;
