--- a/Ui/css/signup.css
+++ b/Ui/css/signup.css
@@ -123,6 +123,14 @@ button {
   font-size: 17px;
   cursor: pointer;
 }
+textarea{
+  padding: 10px;
+  width: 100%;
+  font-size: 17px;
+  border: none;
+  border-bottom: 2px solid #acacac;
+
+}
 button:hover {
   opacity: 0.8;
 }
